Closed Bug 492217 Opened 17 years ago Closed 16 years ago

Incorrect direction of hierarchical tree bullets in RTL trees on Mac

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: ehsan.akhgari, Assigned: mstange)

References

Details

(Keywords: rtl)

Attachments

(2 files, 1 obsolete file)

Attached image Screenshot
The bullets need to be reversed in the closed state, see the screenshot attached.
If there aren't dupes of this in Thunderbird, where it's a constantly visible glaring mistake, there certainly should be.
So, chrome://global/skin/tree.css references chrome://global/skin/tree/twisty-clsd.gif and chrome://global/skin/tree/twisty-open.gif <http://mxr.mozilla.org/mozilla-central/source/toolkit/themes/pinstripe/global/tree.css?mark=315,321#309>, but I can't seem to find them anywhere in the pinstripe directories...
Markus, do the twisty icons come from the -moz-appearance treetwisty and treetwistyopen? If so, then I might not be able to provide a useful patch here because I'm not familiar with native Mac OS X API and I don't have a Mac to test this on...
Attached patch Patch (v1) (doesn't work) (obsolete) — Splinter Review
OK, I spoke too soon. I have not tested this, but I think it should fix the problem.
Attachment #376605 - Flags: superreview?(roc)
Attachment #376605 - Flags: review?(joshmoz)
Attachment #376605 - Attachment is patch: true
Attachment #376605 - Attachment mime type: application/octet-stream → text/plain
Attachment #376605 - Flags: superreview?(roc)
Attachment #376605 - Flags: review?(mstange)
Attachment #376605 - Flags: review?(joshmoz)
Attachment #376605 - Attachment description: Patch (v1) → Patch (v1) (doesn't work)
Attachment #376605 - Attachment is obsolete: true
Attachment #376605 - Flags: review?(mstange)
Comment on attachment 376605 [details] [diff] [review] Patch (v1) (doesn't work) It looks like the documentation is lying... your patch doesn't fix the problem, unfortunately. kThemeDisclosureLeft doesn't change anything. A Google search for kThemeDisclosureLeft turns up http://www.openoffice.org/servlets/ReadMsg?list=allsvn&msgNo=4277, which is a patch for OpenOffice that draws left-pointing twisties manually. I'm not sure if it's worth doing that. (In reply to comment #2) These list-style-image styles can probably be removed.
Oh, that's sad. This way the tree controls look broken on RTL locales. Could we not use -moz-appearance for RTL locales and just stick our own image instead?
Yeah, that's probably a better idea.
Are you willing to take this? I can't really come up with something useful as I'm unable to test my changes... :/
Is anybody working on this? I'm happy to provide testing. This is a major issue for thunderbird. Probably too late for thunderbird3, but perhaps it could be fixed for 3.1.
The changes to the native theme drawing code I made in bug 514745 should make this considerably easier. I'll put this bug on my list.
Assignee: ehsan → mstange
Component: Themes → Widget: Cocoa
Product: Toolkit → Core
QA Contact: themes → cocoa
Blocks: 492249
Attached patch v1Splinter Review
- use RenderTransformedHIThemeControl in DrawButton, where tree disclosure triangles and tree header cells (bug 492249) are drawn - therefore, RenderTransformedHIThemeControl is moved further up, and changed in the following ways: - a render rect is passed to the render callback because HIThemeDrawButton wants it - the buffer is extended to account for focus rings - the buffer is no longer filled with red (oops)
Attachment #411458 - Flags: review?(joshmoz)
Attachment #411458 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: