Bug 492217 - Make more parts of native theme rendering rtl-aware, for example tree twisties and tree header cells with sort arrows. r=josh

--HG--
extra : rebase_source : b203117731e3390d75cd33af84c4b17ee5eade2f